Changed 'PrimitiveWrapper.valueOf()' to 'new PrimitiveWrapper', since the valueOf() method is new as of JDK 1.5.
git-svn-id: https://svn.apache.org/repos/asf/openjpa/trunk@560364 13f79535-47bb-0310-9956-ffa450edef68